--- a/src/style.scss
+++ b/src/style.scss
@@ -93,12 +93,17 @@ body {
     background: linear-gradient(63.53deg, #2d8550 16.62%, #5e6ec2 83.38%);
   }
 
+  &__welcome {
+    margin: 250px 0 0 186px;
+    font-size: 35px;
+    font-weight: 300;
+    letter-spacing: 0.02em;
+    color: $color-white;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+
   &__heading {
-    position: absolute;
-    width: 580px;
-    height: 140px;
-    left: 291px;
-    top: 320px;
+    margin: 29px 0 0 181px;
     font-size: 60px;
     font-weight: 600;
     letter-spacing: 0.02em;
@@ -111,24 +116,11 @@ body {
     }
   }
 
-  &__welcome {
-    position: absolute;
-    left: 296px;
-    top: 250px;
-    font-size: 35px;
-    font-weight: 300;
-    letter-spacing: 0.02em;
-    color: $color-white;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  }
-
   &__start {
-    position: absolute;
+    margin: 130px 0 0 241px;
     border-radius: 100px;
     width: 381px;
     height: 90px;
-    left: 351px;
-    top: 580px;
     font-family: Montserrat;
     font-weight: 700;
     font-size: 36px;
@@ -139,16 +131,119 @@ body {
 }
 
 .game {
-  position: relative;
+  // position: relative;
   display: flex;
 
   &__side-bar {
+    display: flex;
+    // padding: 70px 30px 0 40px;
     width: 470px;
     height: 1024px;
-    left: 0px;
-    top: 0px;
     background: linear-gradient(63.53deg, rgba(45, 133, 80, 0.7) 16.62%, rgba(94, 110, 194, 0.7) 83.38%), $color-white;
     z-index: 1;
+  }
+
+  .side-bar {
+    &__home:before,
+    &__retry:before {
+      content: "";
+      position: absolute;
+      width: 70px;
+      height: 70px;
+      top: 70px;
+    }
+  
+    &__home:before {
+      left: 50px;
+      background: url("../public/img/btn_home-1.svg") no-repeat center transparent;
+    }
+  
+    &__retry:before {
+      left: 158px;
+      background: url("../public/img/btn_retry.svg") no-repeat center transparent;
+    }
+  
+    &__parameters {
+      position: absolute;
+      width: 390px;
+      height: 40px;
+      left: 40px;
+      top: 430px;
+      font-size: 36px;
+      font-weight: 600;
+      color: $color-white;
+    }
+  
+    &__parameter {
+      position: absolute;
+      width: 190px;
+      height: 80px;
+      padding-left: 118px;
+      font-size: 48px;
+      font-weight: 800;
+      line-height: 80px;
+      vertical-align: middle;
+      background: $color-white;
+      color: $color-grey;
+      box-shadow: 0px 0px 50px rgba(131, 42, 64, 0.4);
+      border-radius: 40px;
+  
+      &:after {
+        content: "";
+        position: absolute;
+        width: 60px;
+        height: 60px;
+        left: 10px;
+        top: 10px;
+      }
+  
+      &.--sad {
+        left: 40px;
+        top: 500px;
+  
+        &:after {
+          background: url("../public/img/sad_icon.svg") no-repeat center transparent;
+        }
+      }
+  
+      &.--happy {
+        left: 250px;
+        top: 500px;
+  
+        &:after {
+          background: url("../public/img/happy_icon.svg") no-repeat center transparent;
+        }
+      }
+  
+      &.--heart {
+        left: 149px;
+        top: 620px;
+  
+        &:after {
+          background: url("../public/img/heart_icon.svg") no-repeat center transparent;
+        }
+      }
+    }
+  
+    &__counter {
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 470px;
+      height: 134px;
+      left: 0px;
+      top: 890px;
+      font-size: 36px;
+      text-align: center;
+      letter-spacing: 0.02em;
+      background: rgba(255, 255, 255, 0.15);
+      color: $color-white;
+  
+      &__left {
+        font-size: 44px;
+      }
+    }
   }
 
   &__screen {
@@ -267,110 +362,6 @@ body {
         left: 670px;
         background: linear-gradient(90deg, $color-yellow 0.02%, rgba(195, 199, 11, 0.96) 99.97%, #CAC6AB 99.98%, #D3E9E1 99.99%);
       }
-    }
-  }
-}
-
-.side-bar {
-
-  &__home:before,
-  &__retry:before {
-    content: "";
-    position: absolute;
-    width: 70px;
-    height: 70px;
-    top: 70px;
-  }
-
-  &__home:before {
-    left: 50px;
-    background: url("../public/img/btn_home-1.svg") no-repeat center transparent;
-  }
-
-  &__retry:before {
-    left: 158px;
-    background: url("../public/img/btn_retry.svg") no-repeat center transparent;
-  }
-
-  &__parameters {
-    position: absolute;
-    width: 390px;
-    height: 40px;
-    left: 40px;
-    top: 430px;
-    font-size: 36px;
-    font-weight: 600;
-    color: $color-white;
-  }
-
-  &__parameter {
-    position: absolute;
-    width: 190px;
-    height: 80px;
-    padding-left: 118px;
-    font-size: 48px;
-    font-weight: 800;
-    line-height: 80px;
-    vertical-align: middle;
-    background: $color-white;
-    color: $color-grey;
-    box-shadow: 0px 0px 50px rgba(131, 42, 64, 0.4);
-    border-radius: 40px;
-
-    &:after {
-      content: "";
-      position: absolute;
-      width: 60px;
-      height: 60px;
-      left: 10px;
-      top: 10px;
-    }
-
-    &.--sad {
-      left: 40px;
-      top: 500px;
-
-      &:after {
-        background: url("../public/img/sad_icon.svg") no-repeat center transparent;
-      }
-    }
-
-    &.--happy {
-      left: 250px;
-      top: 500px;
-
-      &:after {
-        background: url("../public/img/happy_icon.svg") no-repeat center transparent;
-      }
-    }
-
-    &.--heart {
-      left: 149px;
-      top: 620px;
-
-      &:after {
-        background: url("../public/img/heart_icon.svg") no-repeat center transparent;
-      }
-    }
-  }
-
-  &__counter {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 470px;
-    height: 134px;
-    left: 0px;
-    top: 890px;
-    font-size: 36px;
-    text-align: center;
-    letter-spacing: 0.02em;
-    background: rgba(255, 255, 255, 0.15);
-    color: $color-white;
-
-    &__left {
-      font-size: 44px;
     }
   }
 }
